gcc/testsuite/rust/rustc/ui/error-codes/E0263.rs
fn foo<'a, 'b, 'a>(x: &'a str, y: &'b str) {
// { dg-error ".E0263." "" { target *-*-* } .-1 }
}

fn main() {}

